workshop03/appv1-deployment.yaml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: appv1-deploy

spec:
  replicas: 2
  template:
    metadata:
      labels:
        name: myapp
        version: v1
    spec:
      containers:
      - name: myapp-container
        image: stackupiss/northwind-app:v1
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - name: myapp-port
          containerPort: 3000
        imagePullPolicy: Always
      restartPolicy: Always
