workshop03/db-deployment.yaml
apiVersion: extensions/v1beta1

kind: Deployment

metadata:
  name: db-deploy

spec:
  replicas: 1
  template:
    metadata:
      name: mysqldb
      labels:
        name: mysqldb
    spec:
      volumes:
      - name: mysqldb-volume
        persistentVolumeClaim:
          claimName: mysqldb-pvc
      containers:
      - name: mysqldbcont
        image: stackupiss/northwind-db:v1
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports:
        - name: mysqldb-port
          containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysqldb-volume
        imagePullPolicy: Always
      restartPolicy: Always
