workshop03/appv2-svc.yaml
kind: Service

apiVersion: v1

metadata:
  name: myappv2-svc

spec:
  selector:
    name: myapp
    version: v2
  type: ClusterIP
  ports:
  - name: myappv2-port
    port: 80
    targetPort: 3000
