workshop03/app-ingress.yaml
apiVersion: extensions/v1beta1

kind: Ingress

metadata:
 name: myapp-ing
 annotations: 
  nginx.ingress.kubernetes.io/rewrite-target: "/"
  nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  backend:
    serviceName: myappv2-svc
    servicePort: 80
  rules:
  - host: app1.157.230.194.53.nip.io
    http:
      paths:
        - backend:
            serviceName: myappv1-svc
            servicePort: 80
  - host: app2.157.230.194.53.nip.io
    http:
      paths:
        - backend:
            serviceName: myappv2-svc
            servicePort: 80
